restapi logger: add /streams endpoint (#201)
fix #200
